--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <center>
     <ul>
       <li>
-        <a href="/Users/rodzayra/Desktop/Web Development/Contactme.html">Contact Me</a>
+        <a href="Contactme.html">Contact Me</a>
       </li>
     </ul>
   </center>
